Standardize styles from homepage to salon.

--- a/website/index.html
+++ b/website/index.html
@@ -35,7 +35,7 @@ description: Join us for inspiring talks and meaningful connections in Summit Co
 </section>
 
 <!-- Save the Date Section -->
-<section class="section section-full" id="main-event" style="background: #f9f9f9; border-top: 1px solid #e0e0e0;">
+<section class="section section-full" id="main-event" style="background: var(--cream); border-top: 1px solid var(--border-color);">
     <div class="save-date-container">
         <div class="save-date-image">
             <img src="{{ '/assets/images/events/save-the-date-event-photo.jpg' | relative_url }}" alt="TEDxBreckenridge 2026 main event at the Riverwalk Center - Save the date for October 3, 2026" loading="lazy">
@@ -46,18 +46,18 @@ description: Join us for inspiring talks and meaningful connections in Summit Co
             <h2 style="font-size: 2.5rem; line-height: 1.2; margin: 16px 0 32px;">TEDxBreckenridge 2026 Main Event</h2>
 
             <div style="margin-bottom: 32px;">
-                <p class="date-large" style="font-size: 2rem; font-weight: 700; margin-bottom: 8px; color: #e62b1e;">October 3, 2026</p>
-                <p style="font-size: 17px; font-weight: 300; color: #666; margin-bottom: 24px;">Riverwalk Center<br>150 W Adams Ave<br>Breckenridge, Colorado 80424</p>
+                <p class="date-large" style="font-size: 2rem; font-weight: 700; margin-bottom: 8px; color: var(--ted-red);">October 3, 2026</p>
+                <p style="font-size: 17px; font-weight: 300; color: var(--stone); margin-bottom: 24px;">Riverwalk Center<br>150 W Adams Ave<br>Breckenridge, Colorado 80424</p>
                 <div style="margin: 24px 0;">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3065.869!2d-106.0436!3d39.4817!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x876a763d6f3c3c3d%3A0x8b3c3c3c3c3c3c3c!2s150%20W%20Adams%20Ave%2C%20Breckenridge%2C%20CO%2080424!5e0!3m2!1sen!2sus!4v1234567890123!5m2!1sen!2sus" width="100%" height="300" style="border:0; border-radius: 8px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Map showing Riverwalk Center at 150 W Adams Ave, Breckenridge, CO 80424"></iframe>
                 </div>
             </div>
 
-            <p style="font-size: 17px; font-weight: 300; line-height: 1.75; margin-bottom: 32px; color: #333;">
+            <p style="font-size: 17px; font-weight: 300; line-height: 1.75; margin-bottom: 32px; color: var(--charcoal);">
                 Mark your calendar for an inspiring evening of ideas worth spreading. This year's theme, speaker lineup, and ticket information will be announced in the coming months.
             </p>
 
-            <div style="display: flex; gap: 16px; flex-wrap: wrap;">
+            <div class="btn-group">
                 <a href="#mailing-list" class="btn btn-primary">Join Our Mailing List</a>
                 <a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=TEDxBreckenridge+2026+Main+Event&dates=20261003T180000/20261003T220000&details=Ideas+worth+spreading+in+the+heart+of+the+Rockies.+Join+us+for+an+evening+of+inspiring+talks+and+meaningful+connections.&location=Riverwalk+Center,+150+W+Adams+Ave,+Breckenridge,+CO+80424&sf=true&output=xml" target="_blank" rel="noopener noreferrer" class="btn btn-secondary">Add to Calendar</a>
             </div>
@@ -66,7 +66,7 @@ description: Join us for inspiring talks and meaningful connections in Summit Co
 </section>
 
 <!-- Donate Section -->
-<section class="section section-full theme-section" id="donate" style="background: #fff; border-top: 1px solid #e0e0e0;">
+<section class="section section-full theme-section" id="donate" style="background: var(--white); border-top: 1px solid var(--border-color);">
     <div class="section-inner">
         <div class="theme-content">
             <div class="theme-text">
@@ -75,7 +75,7 @@ description: Join us for inspiring talks and meaningful connections in Summit Co
                     <h2 class="section-title">Help Bring Ideas Worth Spreading to Summit County</h2>
                 </div>
                 <p>TEDxBreckenridge is a 501(c)(3) nonprofit run entirely by local volunteers. Your contribution directly supports speakers, venues, production, and keeping events accessible to everyone in our community.</p>
-                <div style="margin-top: 32px; display: flex; gap: 16px; flex-wrap: wrap;">
+                <div class="btn-group mt-32">
                     <a href="https://givebutter.com/tedxbreckenridge" target="_blank" rel="noopener noreferrer" class="btn btn-primary" aria-label="Make a donation (opens in new window)">Make a Donation</a>
                     <a href="/donate-local-nonprofit-in-breckenridge/" class="btn btn-secondary">Learn More</a>
                 </div>
@@ -88,49 +88,49 @@ description: Join us for inspiring talks and meaningful connections in Summit Co
 </section>
 
 <!-- Featured Talks Section -->
-<section class="section section-full" id="featured-talks" style="background: #f9f9f9; border-top: 1px solid #e0e0e0;">
+<section class="section section-full" id="featured-talks" style="background: var(--cream); border-top: 1px solid var(--border-color);">
     <div class="section-inner container">
         <div class="section-header" style="text-align: center; margin-bottom: 48px;">
             <div class="section-eyebrow">Featured Talks</div>
             <h2 class="section-title">Ideas from Our Community</h2>
-            <p style="max-width: 600px; margin: 24px auto 0; font-size: 1.125rem; line-height: 1.6; color: #666;">Watch compelling talks from local voices, innovators, and community leaders who've graced the TEDxBreckenridge stage.</p>
+            <p style="max-width: 600px; margin: 24px auto 0; font-size: 1.125rem; line-height: 1.6; color: var(--stone);">Watch compelling talks from local voices, innovators, and community leaders who've graced the TEDxBreckenridge stage.</p>
         </div>
 
-        <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(min(100%, 320px), 1fr)); gap: 32px; margin-bottom: 48px;">
-            <div>
-                <div style="aspect-ratio: 16/9; margin-bottom: 16px;">
-                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/rAE9PDAvv8Y" title="Why restaurants are essential for human connection - Patrick Murphy TEDxBreckenridge" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy" style="border-radius: 8px;"></iframe>
+        <div class="grid-auto-fit-sm mb-48">
+            <div class="video-card">
+                <div class="video-wrapper">
+                    <iframe src="https://www.youtube.com/embed/rAE9PDAvv8Y" title="Why restaurants are essential for human connection - Patrick Murphy TEDxBreckenridge" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
                 </div>
-                <h3 style="font-size: 1.125rem; margin: 0 0 8px 0; line-height: 1.4;">Why restaurants are essential for human connection</h3>
-                <p style="margin: 0; color: #666;">Patrick Murphy</p>
+                <h3>Why restaurants are essential for human connection</h3>
+                <p>Patrick Murphy</p>
             </div>
 
-            <div>
-                <div style="aspect-ratio: 16/9; margin-bottom: 16px;">
-                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/iIWd6FbQqtM" title="How asking for help saved me and can change mental health culture - Drew Petersen TEDxBreckenridge" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy" style="border-radius: 8px;"></iframe>
+            <div class="video-card">
+                <div class="video-wrapper">
+                    <iframe src="https://www.youtube.com/embed/iIWd6FbQqtM" title="How asking for help saved me and can change mental health culture - Drew Petersen TEDxBreckenridge" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
                 </div>
-                <h3 style="font-size: 1.125rem; margin: 0 0 8px 0; line-height: 1.4;">How asking for help saved me & can change mental health culture</h3>
-                <p style="margin: 0; color: #666;">Drew Petersen</p>
+                <h3>How asking for help saved me & can change mental health culture</h3>
+                <p>Drew Petersen</p>
             </div>
 
-            <div>
-                <div style="aspect-ratio: 16/9; margin-bottom: 16px;">
-                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/cWqgfqj0rNM" title="Beyond the slopes: diversifying a mountain economy - Thayer Hirsh TEDxBreckenridge" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy" style="border-radius: 8px;"></iframe>
+            <div class="video-card">
+                <div class="video-wrapper">
+                    <iframe src="https://www.youtube.com/embed/cWqgfqj0rNM" title="Beyond the slopes: diversifying a mountain economy - Thayer Hirsh TEDxBreckenridge" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
                 </div>
-                <h3 style="font-size: 1.125rem; margin: 0 0 8px 0; line-height: 1.4;">Beyond the slopes: diversifying a mountain economy</h3>
-                <p style="margin: 0; color: #666;">Thayer Hirsh</p>
+                <h3>Beyond the slopes: diversifying a mountain economy</h3>
+                <p>Thayer Hirsh</p>
             </div>
         </div>
 
-        <div style="text-align: center; margin-top: 48px;">
-            <p style="margin-bottom: 24px; font-size: 1.125rem; color: #333;">Explore 53 more talks from five years of TEDxBreckenridge events</p>
+        <div class="cta-block">
+            <p>Explore 53 more talks from five years of TEDxBreckenridge events</p>
             <a href="/talks/" class="btn btn-primary">Watch All Talks</a>
         </div>
     </div>
 </section>
 
 <!-- Support Section -->
-<section class="section support-section" id="support" style="background: #f9f9f9; border-top: 1px solid #e0e0e0;">
+<section class="section support-section" id="support" style="background: var(--cream); border-top: 1px solid var(--border-color);">
     <div class="section-header">
         <div class="section-eyebrow">Get Involved</div>
         <h2 class="section-title">Help Make TEDxBreckenridge 2026 Happen</h2>
@@ -177,7 +177,7 @@ description: Join us for inspiring talks and meaningful connections in Summit Co
 </div>
 
 <!-- Sponsors Section -->
-<section class="section section-full sponsors-section" id="sponsors" style="background: #fff; border-top: 1px solid #e0e0e0;">
+<section class="section section-full sponsors-section" id="sponsors" style="background: var(--white); border-top: 1px solid var(--border-color);">
     <div class="section-inner container-md">
         <div class="section-header" style="text-align: center; margin-bottom: 48px;">
             <div class="section-eyebrow">Partnership Opportunities</div>
@@ -185,29 +185,29 @@ description: Join us for inspiring talks and meaningful connections in Summit Co
         </div>
 
         <div class="container-sm">
-            <p style="font-size: 1.125rem; line-height: 1.8; margin-bottom: 32px; text-align: center; color: #666;">
+            <p style="font-size: 1.125rem; line-height: 1.8; margin-bottom: 32px; text-align: center; color: var(--stone);">
                 Sponsoring TEDxBreckenridge connects your business with a community passionate about innovation, creativity, and meaningful change. Your support helps bring world-class ideas to Summit County while demonstrating your commitment to local culture and education.
             </p>
 
-            <div style="display: grid; gap: 32px; margin: 48px 0;">
-                <div style="padding: 32px; background: #fafafa; border-radius: 8px;">
-                    <h3 style="margin: 0 0 16px 0; font-size: 1.5rem;">Reach an Engaged Audience</h3>
-                    <p style="margin: 0; line-height: 1.6; color: #666;">Connect with local leaders, entrepreneurs, educators, and community members who value innovation and are actively shaping the future of our mountain communities.</p>
+            <div class="grid-gap-32 my-48">
+                <div class="card-sand">
+                    <h3>Reach an Engaged Audience</h3>
+                    <p>Connect with local leaders, entrepreneurs, educators, and community members who value innovation and are actively shaping the future of our mountain communities.</p>
                 </div>
 
-                <div style="padding: 32px; background: #fafafa; border-radius: 8px;">
-                    <h3 style="margin: 0 0 16px 0; font-size: 1.5rem;">Support Ideas Worth Spreading</h3>
-                    <p style="margin: 0; line-height: 1.6; color: #666;">Help amplify compelling local voices and bring transformative ideas to life. Your sponsorship directly funds speakers, venues, production, and community programming.</p>
+                <div class="card-sand">
+                    <h3>Support Ideas Worth Spreading</h3>
+                    <p>Help amplify compelling local voices and bring transformative ideas to life. Your sponsorship directly funds speakers, venues, production, and community programming.</p>
                 </div>
 
-                <div style="padding: 32px; background: #fafafa; border-radius: 8px;">
-                    <h3 style="margin: 0 0 16px 0; font-size: 1.5rem;">Build Community Visibility</h3>
-                    <p style="margin: 0; line-height: 1.6; color: #666;">Showcase your brand at in-person events, on our website, and across our social media channels—reaching thousands of community members throughout the year.</p>
+                <div class="card-sand">
+                    <h3>Build Community Visibility</h3>
+                    <p>Showcase your brand at in-person events, on our website, and across our social media channels—reaching thousands of community members throughout the year.</p>
                 </div>
             </div>
 
-            <div style="text-align: center; margin-top: 48px;">
-                <p style="font-size: 1.125rem; margin-bottom: 24px; color: #333;">Interested in becoming a sponsor?</p>
+            <div class="cta-block">
+                <p>Interested in becoming a sponsor?</p>
                 <a href="https://tedxbreckenridge.com/sponsor" target="_blank" rel="noopener noreferrer" class="btn btn-primary" aria-label="Learn About Sponsorship Opportunities (opens in new window)">Learn About Sponsorship Opportunities</a>
             </div>
         </div>
@@ -215,7 +215,7 @@ description: Join us for inspiring talks and meaningful connections in Summit Co
 </section>
 
 <!-- Mailing List Section -->
-<section class="newsletter-section" id="mailing-list" style="border-top: 1px solid #e0e0e0;">
+<section class="newsletter-section" id="mailing-list" style="border-top: 1px solid var(--border-color);">
     <div class="newsletter-content">
         <h2>Stay in the know</h2>
         <p>Join our mailing list for updates on upcoming events, speaker announcements, and Salon gatherings.</p>
