--- a/website/salon.html
+++ b/website/salon.html
@@ -12,15 +12,13 @@ description: TEDxBreckenridge Salon events are small, conversational gatherings 
     </div>
 </section>
 
-<section class="section section-full" style="background: #fff; padding-top: 40px;">
-    <div class="section-inner container-sm">
-        <div style="font-size: 1.125rem; line-height: 1.8; color: #333;">
-            <p style="margin-bottom: 32px;">TEDxBreckenridge Salon events are intimate, conversational gatherings that bring together curious minds to explore fascinating topics. Unlike our main annual event, Salons are smaller by design—creating space for deeper discussion, questions, and genuine connection.</p>
+<section class="section section-full" style="background: var(--white); padding-top: 40px;">
+    <div class="section-inner container-sm prose">
+        <p class="intro">TEDxBreckenridge Salon events are intimate, conversational gatherings that bring together curious minds to explore fascinating topics. Unlike our main annual event, Salons are smaller by design—creating space for deeper discussion, questions, and genuine connection.</p>
 
-            <p style="margin-bottom: 32px;">Each Salon features a short talk or presentation from a local expert, followed by guided conversation where everyone's voice matters. It's learning that feels less like a lecture and more like sitting around a table with friends who love to explore ideas together.</p>
+        <p>Each Salon features a short talk or presentation from a local expert, followed by guided conversation where everyone's voice matters. It's learning that feels less like a lecture and more like sitting around a table with friends who love to explore ideas together.</p>
 
-            <p style="margin-bottom: 0;">Topics vary throughout the year—from science and technology to art, culture, and community challenges. What stays constant is the spirit: curiosity-driven, accessible to all, and designed to leave you thinking differently about the world around you.</p>
-        </div>
+        <p>Topics vary throughout the year—from science and technology to art, culture, and community challenges. What stays constant is the spirit: curiosity-driven, accessible to all, and designed to leave you thinking differently about the world around you.</p>
     </div>
 </section>
 
@@ -39,17 +37,17 @@ description: TEDxBreckenridge Salon events are small, conversational gatherings 
                 <p>Why does water boil at a lower temperature in the mountains? Why do cakes rise too fast—or not at all? And how do professional chefs adapt their techniques when cooking at 9,000 feet?</p>
                 <p>In this TEDxBreckenridge Salon, the culinary team from <a href="https://coloradomtn.edu/" target="_blank" rel="noopener noreferrer">Colorado Mountain College</a> explores how altitude changes the rules of cooking and baking—and what it takes to master flavor, texture, and technique in the High Rockies. Through a short talk, practical insights, and guided discussion, we'll dive into the science behind high-elevation kitchens and the creative adaptations that make great food possible up here.</p>
                 <p>Come ready to think, ask questions, and leave with ideas you'll actually use in your own kitchen.</p>
-                <div style="margin-top: 32px; padding: 24px; background: #fafafa; border-radius: 8px;">
-                    <p style="margin: 0 0 16px 0;"><strong>January 15, 2026 • 6:00 PM</strong><br>
+                <div style="margin-top: 32px; padding: 24px; background: var(--sand); border-radius: 8px;">
+                    <p style="margin: 0 0 16px 0; color: var(--charcoal);"><strong>January 15, 2026 • 6:00 PM</strong><br>
                     EVO3 Workspace<br>
                     620 E Main St #6, Frisco, CO 80443</p>
                     <div style="margin: 16px 0;">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3076.7747895686373!2d-106.09786892396915!3d39.57455871140394!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x876a76cd7c2c0f63%3A0x7b7c0a3e3e0e0e0e!2s620%20Main%20St%20%236%2C%20Frisco%2C%20CO%2080443!5e0!3m2!1sen!2sus!4v1234567890123!5m2!1sen!2sus" width="100%" height="300" style="border:0; border-radius: 8px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Map showing EVO3 Workspace location at 620 E Main St #6, Frisco, CO 80443"></iframe>
                     </div>
-                    <p style="margin: 0;"><strong>Suggested donation:</strong> $10<br>
+                    <p style="margin: 0; color: var(--charcoal);"><strong>Suggested donation:</strong> $10<br>
                     <em>Ideas should be accessible to everyone. If cost is a barrier, join us anyway — your curiosity matters most.</em></p>
                 </div>
-                <div style="margin-top: 32px; display: flex; gap: 16px; flex-wrap: wrap;">
+                <div class="btn-group mt-32">
                     <a href="https://tedxbreckenridge.ticketsauce.com/e/cooking-at-altitude" class="btn btn-primary">Get Tickets</a>
                     <a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=TEDxBreckenridge+Salon:+Elevated+Cuisine&dates=20260115T180000/20260115T200000&details=Explore+how+altitude+changes+the+rules+of+cooking+and+baking+with+the+culinary+team+from+Colorado+Mountain+College.&location=EVO3+Workspace,+620+E+Main+St+%236,+Frisco,+CO+80443&sf=true&output=xml" target="_blank" rel="noopener noreferrer" class="btn btn-secondary">Add to Calendar</a>
                 </div>
@@ -59,7 +57,7 @@ description: TEDxBreckenridge Salon events are small, conversational gatherings 
 </section>
 
 <!-- Upcoming Salons Schedule -->
-<section class="section section-full" style="background: #f9f9f9;">
+<section class="section section-full" style="background: var(--cream);">
     <div class="section-inner container-sm">
         <div class="section-header" style="text-align: center; margin-bottom: 48px;">
             <div class="section-eyebrow">2026 Season</div>
@@ -106,8 +104,8 @@ description: TEDxBreckenridge Salon events are small, conversational gatherings 
             </div>
         </div>
 
-        <div style="text-align: center; margin-top: 48px;">
-            <p style="font-size: 1.125rem; color: #666; margin-bottom: 24px;">Join our mailing list to be notified when new Salon events are announced.</p>
+        <div class="cta-block">
+            <p class="text-stone">Join our mailing list to be notified when new Salon events are announced.</p>
             <a href="/#mailing-list" class="btn btn-primary">Join Our Mailing List</a>
         </div>
     </div>
