Replace hard-coded colors.

--- a/website/pages/talks.html
+++ b/website/pages/talks.html
@@ -14,7 +14,7 @@ description: Watch inspiring TEDx talks from Breckenridge speakers. Explore idea
   </div>
 
 <!-- 2025: METAMORPHOSIS -->
-<section class="section talks-year-section" id="metamorphosis" style="background: #fff; padding: 120px 24px;">
+<section class="section talks-year-section" id="metamorphosis" style="background: var(--white); padding: 120px 24px;">
     <div class="section-inner container">
         <div class="section-header" style="display: grid; grid-template-columns: 300px 1fr; gap: 48px; align-items: center; margin-bottom: 64px;">
             <img src="{{ '/assets/images/heroes/2025_metamorphosis.webp' | relative_url }}" alt="TEDxBreckenridge 2025 Metamorphosis event logo - transformation and evolution theme" class="img-fluid">
@@ -202,7 +202,7 @@ description: Watch inspiring TEDx talks from Breckenridge speakers. Explore idea
 </section>
 
 <!-- 2022: INTEGRATE -->
-<section class="section talks-year-section" id="integrate" style="background: #fff; padding: 120px 24px;">
+<section class="section talks-year-section" id="integrate" style="background: var(--white); padding: 120px 24px;">
     <div class="section-inner container">
         <div class="section-header" style="display: grid; grid-template-columns: 300px 1fr; gap: 48px; align-items: center; margin-bottom: 64px;">
             <img src="{{ '/assets/images/heroes/2022_integrate.webp' | relative_url }}" alt="TEDxBreckenridge 2022 Integrate event logo - connection and unity theme" class="img-fluid">
@@ -383,7 +383,7 @@ description: Watch inspiring TEDx talks from Breckenridge speakers. Explore idea
 </section>
 
 <!-- 2020: CONNECTION -->
-<section class="section talks-year-section" id="connection" style="background: #fff; padding: 120px 24px;">
+<section class="section talks-year-section" id="connection" style="background: var(--white); padding: 120px 24px;">
     <div class="section-inner container">
         <div class="section-header" style="display: grid; grid-template-columns: 300px 1fr; gap: 48px; align-items: center; margin-bottom: 64px;">
             <img src="{{ '/assets/images/heroes/2020_connection.webp' | relative_url }}" alt="TEDxBreckenridge 2020 Connection event logo - community and relationships theme" class="img-fluid">
