Create .talks-year-header class to replace inline grid styles in talks.html.

--- a/website/pages/talks.html
+++ b/website/pages/talks.html
@@ -14,14 +14,14 @@ description: Watch inspiring TEDx talks from Breckenridge speakers. Explore idea
   </div>
 
 <!-- 2025: METAMORPHOSIS -->
-<section class="section talks-year-section" id="metamorphosis" style="background: var(--white); padding: 120px 24px;">
+<section class="section talks-year-section bg-white" id="metamorphosis">
     <div class="section-inner container">
-        <div class="section-header" style="display: grid; grid-template-columns: 300px 1fr; gap: 48px; align-items: center; margin-bottom: 64px;">
+        <div class="talks-year-header">
             <img src="{{ '/assets/images/heroes/2025_metamorphosis.webp' | relative_url }}" alt="TEDxBreckenridge 2025 Metamorphosis event logo - transformation and evolution theme" class="img-fluid">
             <div>
-                <div class="section-eyebrow" style="font-size: 1rem; font-weight: 600; color: var(--terracotta);">2025</div>
-                <h2 class="section-title" style="font-size: 2.5rem; margin: 16px 0 24px;">METAMORPHOSIS</h2>
-                <p style="font-size: 1.125rem; line-height: 1.6; color: var(--stone);">Our 2025 talks explore transformation—the moments when we evolve, adapt, and emerge fundamentally changed.</p>
+                <div class="section-eyebrow eyebrow-terracotta">2025</div>
+                <h2 class="section-title">METAMORPHOSIS</h2>
+                <p>Our 2025 talks explore transformation—the moments when we evolve, adapt, and emerge fundamentally changed.</p>
             </div>
         </div>
 
@@ -108,14 +108,14 @@ description: Watch inspiring TEDx talks from Breckenridge speakers. Explore idea
 </section>
 
 <!-- 2023: INSTINCT -->
-<section class="section talks-year-section bg-sand" id="instinct" style="padding: 120px 24px;">
+<section class="section talks-year-section bg-sand" id="instinct">
     <div class="section-inner container">
-        <div class="section-header" style="display: grid; grid-template-columns: 300px 1fr; gap: 48px; align-items: center; margin-bottom: 64px;">
+        <div class="talks-year-header">
             <img src="{{ '/assets/images/heroes/2023_instinct.webp' | relative_url }}" alt="TEDxBreckenridge 2023 Instinct event logo - intuition and inner wisdom theme" class="img-fluid">
             <div>
-                <div class="section-eyebrow" style="font-size: 1rem; font-weight: 600; color: var(--teal);">2023</div>
-                <h2 class="section-title" style="font-size: 2.5rem; margin: 16px 0 24px;">INSTINCT</h2>
-                <p style="font-size: 1.125rem; line-height: 1.6; color: var(--stone);">11 speakers explored the power of instinct—the gut feelings, intuitions, and innate knowledge that guide us through life's most important decisions.</p>
+                <div class="section-eyebrow eyebrow-teal">2023</div>
+                <h2 class="section-title">INSTINCT</h2>
+                <p>11 speakers explored the power of instinct—the gut feelings, intuitions, and innate knowledge that guide us through life's most important decisions.</p>
             </div>
         </div>
 
@@ -202,14 +202,14 @@ description: Watch inspiring TEDx talks from Breckenridge speakers. Explore idea
 </section>
 
 <!-- 2022: INTEGRATE -->
-<section class="section talks-year-section" id="integrate" style="background: var(--white); padding: 120px 24px;">
+<section class="section talks-year-section bg-white" id="integrate">
     <div class="section-inner container">
-        <div class="section-header" style="display: grid; grid-template-columns: 300px 1fr; gap: 48px; align-items: center; margin-bottom: 64px;">
+        <div class="talks-year-header">
             <img src="{{ '/assets/images/heroes/2022_integrate.webp' | relative_url }}" alt="TEDxBreckenridge 2022 Integrate event logo - connection and unity theme" class="img-fluid">
             <div>
-                <div class="section-eyebrow" style="font-size: 1rem; font-weight: 600; color: var(--terracotta);">2022</div>
-                <h2 class="section-title" style="font-size: 2.5rem; margin: 16px 0 24px;">INTEGRATE</h2>
-                <p style="font-size: 1.125rem; line-height: 1.6; color: var(--stone);">11 speakers examined how we bring together disparate parts—ideas, communities, technologies, and identities—to create something greater than the sum.</p>
+                <div class="section-eyebrow eyebrow-terracotta">2022</div>
+                <h2 class="section-title">INTEGRATE</h2>
+                <p>11 speakers examined how we bring together disparate parts—ideas, communities, technologies, and identities—to create something greater than the sum.</p>
             </div>
         </div>
 
@@ -296,14 +296,14 @@ description: Watch inspiring TEDx talks from Breckenridge speakers. Explore idea
 </section>
 
 <!-- 2021: EXPAND -->
-<section class="section talks-year-section bg-sand" id="expand" style="padding: 120px 24px;">
+<section class="section talks-year-section bg-sand" id="expand">
     <div class="section-inner container">
-        <div class="section-header" style="display: grid; grid-template-columns: 300px 1fr; gap: 48px; align-items: center; margin-bottom: 64px;">
+        <div class="talks-year-header">
             <img src="{{ '/assets/images/heroes/2021_expand.webp' | relative_url }}" alt="TEDxBreckenridge 2021 Expand event logo - growth and possibilities theme" class="img-fluid">
             <div>
-                <div class="section-eyebrow" style="font-size: 1rem; font-weight: 600; color: var(--teal);">2021</div>
-                <h2 class="section-title" style="font-size: 2.5rem; margin: 16px 0 24px;">EXPAND</h2>
-                <p style="font-size: 1.125rem; line-height: 1.6; color: var(--stone);">10 speakers challenged us to push boundaries, broaden perspectives, and grow beyond our perceived limits.</p>
+                <div class="section-eyebrow eyebrow-teal">2021</div>
+                <h2 class="section-title">EXPAND</h2>
+                <p>10 speakers challenged us to push boundaries, broaden perspectives, and grow beyond our perceived limits.</p>
             </div>
         </div>
 
@@ -383,14 +383,14 @@ description: Watch inspiring TEDx talks from Breckenridge speakers. Explore idea
 </section>
 
 <!-- 2020: CONNECTION -->
-<section class="section talks-year-section" id="connection" style="background: var(--white); padding: 120px 24px;">
+<section class="section talks-year-section bg-white" id="connection">
     <div class="section-inner container">
-        <div class="section-header" style="display: grid; grid-template-columns: 300px 1fr; gap: 48px; align-items: center; margin-bottom: 64px;">
+        <div class="talks-year-header">
             <img src="{{ '/assets/images/heroes/2020_connection.webp' | relative_url }}" alt="TEDxBreckenridge 2020 Connection event logo - community and relationships theme" class="img-fluid">
             <div>
-                <div class="section-eyebrow" style="font-size: 1rem; font-weight: 600; color: var(--terracotta);">2020 • First Event</div>
-                <h2 class="section-title" style="font-size: 2.5rem; margin: 16px 0 24px;">CONNECTION</h2>
-                <p style="font-size: 1.125rem; line-height: 1.6; color: var(--stone);">10 speakers launched TEDxBreckenridge by exploring what connects us—to each other, to our environment, and to ideas worth spreading.</p>
+                <div class="section-eyebrow eyebrow-terracotta">2020 • First Event</div>
+                <h2 class="section-title">CONNECTION</h2>
+                <p>10 speakers launched TEDxBreckenridge by exploring what connects us—to each other, to our environment, and to ideas worth spreading.</p>
             </div>
         </div>
 
